--- a/src/components/ContactCard/style.scss
+++ b/src/components/ContactCard/style.scss
@@ -94,11 +94,20 @@
             text-align: center;
             padding: 0;
             margin: 0;
+
+            h2 {
+                font-size: 1.2em;
+            }
         }
 
         .social {
             text-align: center;
             padding: 0;
+            padding-bottom: 2em;
+
+            h2 {
+                font-size: 1.2em;
+            }
         }
     }
 }   
